# dspy-demo

./: .env.sample  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: dspy-demo.ipynb
