[tool.poetry]
name = "dspy-demo"
version = "0.1.0"
description = "DSPy Demo"
authors = ["Niels van Galen Last <nvangalenlast@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.5"
langchain-openai = "^0.2.4"
langchain-community = "^0.3.3"
pypdf = "^5.1.0"
ollama = "^0.3.3"
chromadb = "^0.5.16"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.2.2-cp312-none-macosx_10_9_x86_64.whl"}
sentence-transformers = "^3.2.1"
dspy-ai = "2.5.16"


[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^24.10.0" }
isort = "^5.13.2"
pre-commit = "^4.0.1"
pylint = "^3.3.1"
pytest = "^8.3.3"
jupyterlab = "^4.2.5"
jupyterlab-widgets = "^3.0.13"
ipywidgets = "^8.1.5"
python-dotenv = "^1.0.1"
ipython = "^8.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.py$'

[tool.isort]
profile = "black"
# force_single_line = "false"
force_sort_within_sections = "true"
line_length = 100
